--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,13 +1,16 @@
 name: true_time_example
 description: Demonstrates how to use the true_time plugin.
 
+environment:
+  sdk: '>=2.10.0 <3.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
